--- a/weibo/src/main/webapp/WEB-INF/view/header/detail-head.html
+++ b/weibo/src/main/webapp/WEB-INF/view/header/detail-head.html
@@ -26,6 +26,7 @@
               <a url="/op/follow/id/${detUser.uuid}.do" class="op">关注</a>
         	</span>
         <#else>
+        	<input id="ifMyself" type="hidden" value="no"></input>
 		</#if>  
         
         </div>
